--- a/tex/experiments.tex
+++ b/tex/experiments.tex
@@ -52,7 +52,7 @@ For the conducted experiments, hand-crafted filters seem sufficient and are pref
 \begin{figure}[h]
     \centering
     \includegraphics[width=0.99\textwidth]{filters_feature_extractor}
-    \caption[Hand-crafted filters of the sensory system]{The hand-crafted filters of the sensory system used to extract features from the images. The filters are optimised for horizontal, vertical, and diagonal lines.}
+    \caption[Hand-crafted filters of the sensory system]{The hand-crafted filters of the sensory system are used to extract features from the images. The filters are optimised for horizontal, vertical, and diagonal lines.}
     \figlbl{filters_feature_extractor}
 \end{figure}
 
