--- a/tex/preface.tex
+++ b/tex/preface.tex
@@ -18,7 +18,7 @@ In this Master's thesis, it took me some time to make the transition from this d
 
 Completing this thesis spanned an entire year, the maximum duration allowed by my university.
 The process of formulating and refining the theory was punctuated by setbacks and experiments that did not produce the desired results.
-After approximately seven months of work, I had developed two biologically inspired models that showed promising performance. 
+After approximately seven months of work, I developed two biologically inspired models that showed promising performance. 
 In fact, I had even written an entire thesis about these models, which, with some improvements, could have been submitted.
 However, as these concepts did not entirely convince me as a foundation for a dissertation, I decided to discard my work and pursue a new approach only five months before the submission deadline.
 Consequently, this thesis contains only a fraction of the conducted experiments but builds on the experience gained from earlier failed attempts.
