--- a/tex/related_work.tex
+++ b/tex/related_work.tex
@@ -71,7 +71,7 @@ Nested net fragments of different sizes may represent a hierarchy of features.
 Complex objects, such as mental constructs, can thus be seen as larger net fragments composed of mergers of pre-existing smaller net fragments.
 
 \citeay{von_der_malsburg_theory_2022} have not addressed how their theoretical concepts can be translated into a computational model.
-This is probably not elaborated in their work because their theory speculates about neuroscientific concepts necessary for emergence and these insights are not intended to preclude implementations.
+This is probably not elaborated in their work because their theory speculates about neuroscientific concepts necessary for emergence, and these insights are not intended to preclude implementations.
 However, the theory can be interpreted differently, and consequently, various ways exist to implement it.
 A concrete implementation is proposed by Lehmann in the form of a Master's thesis \sidecite{lehmann_leveraging_2022}.
 He proposes a new layer called the laterally connected layer (LCL) that forms lateral intra-layer connections based on the Hebbian learning rule (c.f. \secref{hebbian}).
@@ -172,7 +172,7 @@ Unlike ANNs, they use competitive learning instead of error correction learning 
 Local competitive learning ensures that samples are close in the input space are also closed in the resulting maps.
 Thus, the data space is self-organised by local rearrangements.
 
-However, SOMs have two significant limitations; First, the network structure must be pre-defined, limiting the mapping accuracy. Second, the map's capacity is pre-defined through the number of nodes.
+However, SOMs have two significant limitations; First, the network structure must be predefined, limiting the mapping accuracy. Second, the map's capacity is predefined through the number of nodes.
 Growing networks overcome these limitations and add nodes or whole layers of nodes into the network structure at the positions of the map where the error is highest \cite{reilly_neural_1982, fritzke_growing_1994, marsland_self-organising_2002}.
 
 Besides ANNs, the structure of spiking neural networks (c.f. Section \secref{spiking_networks}) can also be optimised using self-organisation. 
