--- a/tex/intro.tex
+++ b/tex/intro.tex
@@ -5,7 +5,7 @@ Since then, AI systems have transcended conventional boundaries and gained wides
 
 Such AI systems are trained to optimise a specific target function, such as predicting the subsequent word token in the case of language models \sidecite{radford_improving_2018}.
 Therefore, such systems rely on statistical patterns rather than genuine understanding and still lack cognitive capabilities, reasoning ability, self-awareness, and intentionality \sidecite{rosenbloom_defining_2023, mitchell_debate_2023}.
-Furthermore, deep networks suffer from various issues of statistical learning such as missing robustness \sidecite{akhtar_threat_2018, long_survey_2022}, catastrophic forgetting \sidecite{kirkpatrick_overcoming_2017}, or requiring vast amounts of data \sidecite{smith_using_2022} (c.f. \secref{limitationsDL}).
+Furthermore, deep networks suffer from various issues of statistical learning, such as missing robustness \sidecite{akhtar_threat_2018, long_survey_2022}, catastrophic forgetting \sidecite{kirkpatrick_overcoming_2017}, or requiring vast amounts of data \sidecite{smith_using_2022} (c.f. \secref{limitationsDL}).
 
 Geoffrey Hinton, recipient of the Turing Award\sidenote{The Turing Award is recognised as the highest academic award in computer science and sometimes also called the ``Nobel Prize of Computing''.} and a prominent figure in the field, is considered one of the pioneers of deep learning.
 His remarkable contributions, including developing deep learning's error correction algorithm called ``backpropagation of error'' (c.f. \secref{ann}), have laid the foundation for today's deep learning systems.
@@ -59,7 +59,7 @@ This thesis makes the following contributions:
 	\item The basics of deep learning and neurocomputing are described. Together with the related work, this provides a survey of the most important research dealing with alternative learning algorithms.
 	\item The ``Theory of Natural Intelligence" proposed by \sideciteay{von_der_malsburg_theory_2022} is discussed and put into the context of the theory of self-organising projection fibres \sidecite{wiskott_face_1997, wolfrum_recurrent_2008} and the proposed vision framework. I argue that this thesis can be considered a more concrete formulation of this theory.
     \item Many neuroscientific concepts that are highly relevant for visual object recognition are identified and summarised, and a vocabulary compatible with the current deep learning framework is introduced. The contribution of \chref{biological_inspiration} is not per se on discovering new findings but rather summarising relevant concepts.
-	\item An implementation of the identified neuroscientific concepts is proposed based on a novel Bernoulli neuron,  a neuron firing a binary spike based on a probability distribution, and self-organising synaptic connections. This conceptual work describes a new framework that has never been implemented in this form before and originates from this thesis. 
+	\item An implementation of the identified neuroscientific concepts is proposed based on a novel Bernoulli neuron,  a neuron firing a binary spike based on a probability distribution and self-organising synaptic connections. This conceptual work describes a new framework that has never been implemented in this form before and originates from this thesis. 
     \item The feasibility of the proposed framework is demonstrated with experiments.
     \item Directions for future research are given to improve the proposed vision framework further.
 \end{enumerate}
